salesforce/companion/force-app/main/default/objects/Activity/fields/Call_Journey__c.field-meta.xml
<CustomField>
    <fullName>Call_Journey__c</fullName>
    <label>Call Journey</label>
    <description>Opens the Contact Center call journey (timeline, metrics, recording and transcript) for this call.</description>
    <referenceTo>Contact_Center_Call__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>