salesforce/companion/force-app/main/default/objects/Activity/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <label>Conversation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>