salesforce/companion/force-app/main/default/objects/Activity/fields/Hold_Count__c.field-meta.xml
<CustomField>
    <fullName>Hold_Count__c</fullName>
    <label>Hold Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>