salesforce/companion/force-app/main/default/objects/Activity/fields/Live_Work_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Live_Work_Item_Id__c</fullName>
    <label>Live Work Item Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>