salesforce/companion/force-app/main/default/objects/Activity/fields/Muted__c.field-meta.xml
<CustomField>
    <fullName>Muted__c</fullName>
    <label>Muted</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>