salesforce/companion/force-app/main/default/objects/Activity/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <length>120</length>
    <type>Text</type>
</CustomField>