salesforce/companion/force-app/main/default/objects/Activity/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <label>SLA Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>