salesforce/companion/force-app/main/default/objects/Activity/fields/Sync_To_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_Workspace__c</fullName>
    <label>Sync To Workspace</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>